<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textStyle="bold"
            android:textSize="16sp" android:textColor="#000000"/>
    <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
    />
    <Button
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minus"
            app:layout_constraintStart_toEndOf="@+id/add"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
            android:text="@string/add5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add5"
            app:layout_constraintStart_toEndOf="@+id/minus"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
            android:text="@string/minus5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minus5"
            app:layout_constraintStart_toEndOf="@+id/add5"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/playerNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerNumber" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="16sp"
            android:textColor="#000000"/>
    <TextView
            android:text="@string/lifePoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lifePoint" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/playerNumber"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="16sp"
            android:textColor="#000000"/>
    <TextView
            android:text="@string/lifePointValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lifePointValue" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/lifePoint"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="16sp"
            android:textColor="#000000"/>
</androidx.constraintlayout.widget.ConstraintLayout>